Sync with gitlab